# CRDS-Data-Process

./: .gitignore  LICENSE  README.md  config.json  local  main.py  pyproject.toml
.provenance/: headers.sqlite
config/: default.yaml
data/hitran/: O2_9000_10000_sw_ge_1e-29.csv  O2_iso1.data  O2_iso1.header
data/reference/: o2_remeasure_pressure_plan.csv
notebooks/: 01_ringdown_exploration.ipynb  02_absorption_spectrum.ipynb  03_spectral_fitting.ipynb
output/results/final/: spectral_parameters.csv
scripts/: download_o2_lines.py  etalon_removal.py  mats_fitting.py  process_raw.py  test_etalon_removal.py  test_process_raw.py
src/crds_process/: __init__.py  cli.py  config.py  gas_config.py  log.py  pipeline.py  preprocessing.py
src/crds_process/absorption/: __init__.py  coefficients.py
src/crds_process/baseline/: __init__.py  etalon.py  fitting.py
src/crds_process/continuum/: __init__.py  analysis.py
src/crds_process/io/: __init__.py  exporters.py  readers.py
src/crds_process/ringdown/: __init__.py  filtering.py  processing.py
src/crds_process/spectral/: __init__.py  linear_regression.py  mats_wrapper.py
src/crds_process/visualization/: plots.py
tests/: conftest.py  test_absorption.py  test_baseline.py  test_config.py  test_ringdown.py
